# tinylog

./: README.md  TODO.txt
master/: CMakeLists.txt
master/include/: ConsoleWriter.h  FileWriter.h  SaveList.hpp  Speaker.h  WriterUtility.h  main.h  tinylog.h
master/src/: ConsoleWriter.cpp  FileWriter.cpp  Speaker.cpp  WriterUtility.cpp  main.cpp
